# melsec_mc_mock_gui

./: .eslintignore  .eslintrc.cjs  Cargo.toml  README.md  default_device_assignment.toml  package-lock.json  package.json  tauri.conf.json  tmp_debug.json  tsconfig.json  vitest.config.ts
src/: default_device_assignment_q.tsv  device_map.rs  handler.rs  index.html  lib.rs  main.js  main.rs  main.ts  server.rs
src-tauri/capabilities/: README.md  default.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: monitor.spec.ts
src/components/: monitor.ts
tests/: abnormal_cases.rs  cross_protocol_shared_store.rs  debug_handler_direct.rs  error_response_format.rs  handler_direct_shared_store.rs  integration.rs  integration_server.rs  mc4e_read_write_compare.rs  partial_frame_handling.rs  raw_compare_with_real.rs  regression_write_endcode.rs  server_key_parsing.rs  tim_await.rs
