[package]
name = "melsec_mc_gui"
version = "0.1.0"
edition = "2021"
authors = ["tyaro"]
description = "Tauri GUI for melsec_mc mock server"
license = "MIT"

[lib]
name = "melsec_mc_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0"
tracing = "0.1"

# reuse mock and core crates from workspace
melsec_mc_mock = { path = "../melsec_mc_mock" }
melsec_mc = { path = ".." }


